Fixed hidden phone icon on Safari and added transition to blog cards

--- a/components/Card/BlogPost/styles.module.scss
+++ b/components/Card/BlogPost/styles.module.scss
@@ -2,6 +2,14 @@
 
 .card {
   box-shadow: $color-mine-shaft 0px 7px 29px 0px;
+  transform: translateY(0.5rem);
+  opacity: 0;
+  transition: 200ms ease-in all;
+
+  &.animate {
+    transform: translateY(0);
+    opacity: 1;
+  }
 
   &:hover {
     & svg {
