--- a/sass/utilities/_container.scss
+++ b/sass/utilities/_container.scss
@@ -11,7 +11,7 @@
 }
 
 .article-container {
-  max-width: 65ch;
+  max-width: 70ch;
   margin: 0 auto 5rem auto;
 
   @include mq("small") {
